Forgot a dependency - whoops

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "jsonschema": "^1.2.2",
     "handlebars": "^4.0.11",
     "mysql": "^2.15.0",
-    "bower": "^1.8.2"
+    "bower": "^1.8.2", 
+    "express-session": "^1.15.6",
+    "connect-redis": "^3.3.2",
+    "config": "^1.29.0"
   }
 }
