--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.15.6",
     "connect-redis": "^3.3.2",
     "config": "^1.29.0",
-    "bower": "^1.8.2"
+    "bower": "^1.8.2",
+    "cookie-parser": "^1.4.3"
   }
 }
